syntax = "proto3";

package calculator;
option go_package="calculatorpb";

message Sum {
    int64 a = 1;
    int64 b = 2;
}

message SumRequest {
    Sum sum = 1;
}

message SumResponse {
    int64 sum = 1;
}

message PrimeNumberDecompositionRequest {
    int64 number = 1;
}

message PrimeNumberDecompositionResponse {
    int64 prime_number = 2;
}

service CalculatorService{
    rpc Sum(SumRequest) returns (SumResponse) {}
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {}
}
